<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:id="@+id/libraries_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/dashboardapp_card"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cards_margin"
                android:padding="@dimen/cards_padding"
                card_view:cardBackgroundColor="@color/cardview_light_background"
                card_view:cardElevation="@dimen/cards_elevation">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cards_margin">

                    <ImageView
                        android:id="@+id/appicon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_logo"
                        android:layout_centerHorizontal="true"
                        android:clickable="true"
                        android:layout_alignParentTop="true"
                        tools:ignore="ContentDescription"/>

                    <TextView
                        android:id="@+id/dashapp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:paddingTop="4dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_big"
                        android:layout_below="@+id/appicon"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/dashapp_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:layout_below="@id/dashapp"
                        android:text="@string/app"
                        android:lineSpacingMultiplier="1.2"
                        android:textColor="@color/dark_grey"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/text_small" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/dashapp_info"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/dashapp_changelog"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackground"
                            android:padding="@dimen/cards_padding"
                            android:text="@string/changelog"
                            android:clickable="true"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/text_small"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/dashapp_gplus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackground"
                            android:padding="@dimen/cards_padding"
                            android:text="@string/gpluscommunity"
                            android:textColor="@color/dark_grey"
                            android:clickable="true"
                            android:textSize="@dimen/text_small"
                            android:textStyle="bold" />

                    </LinearLayout>


                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/dashboardauthor_card"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cards_margin"
                android:padding="@dimen/cards_padding"
                card_view:cardBackgroundColor="@color/cardview_light_background"
                card_view:cardElevation="@dimen/cards_elevation">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cards_margin">

                    <ImageView
                        android:id="@+id/profile"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_profile"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        tools:ignore="ContentDescription"/>

                    <TextView
                        android:id="@+id/dashauthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_big"
                        android:layout_below="@+id/profile"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/dashauthor_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:layout_below="@id/dashauthor"
                        android:lineSpacingMultiplier="1.2"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:id="@+id/dashauthor_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:layout_below="@id/dashauthor_info"
                        android:text="@string/copyright"
                        android:lineSpacingMultiplier="1.2"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:id="@+id/dashauthor_license"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:layout_below="@id/dashauthor_right"
                        android:text="@string/license"
                        android:lineSpacingMultiplier="1.2"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_small" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/dashauthor_license"
                        android:orientation="horizontal"
                        android:id="@+id/linearLayout">

                        <TextView
                            android:id="@+id/dashauthor_insta_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackground"
                            android:padding="@dimen/cards_padding"
                            android:text="@string/instagram"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/text_small"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/dashauthor_gplus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackground"
                            android:padding="@dimen/cards_padding"
                            android:text="@string/gplus"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/text_small"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/dashauthor_source"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackground"
                            android:padding="@dimen/cards_padding"
                            android:text="@string/source"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/text_small"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/dashboardauthor_card3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cards_margin"
                android:padding="@dimen/cards_padding"
                card_view:cardBackgroundColor="@color/cardview_light_background"
                card_view:cardElevation="@dimen/cards_elevation">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cards_margin">

                    <ImageView
                        android:id="@+id/profile2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        tools:ignore="ContentDescription"/>

                    <TextView
                        android:id="@+id/dashauthor2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_big"
                        android:layout_below="@+id/profile2"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/dashauthor_info2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:layout_below="@id/dashauthor2"
                        android:lineSpacingMultiplier="1.2"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/text_small" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/dashauthor_info2"
                        android:orientation="horizontal"
                        android:id="@+id/linearLayout2">

                        <TextView
                            android:id="@+id/author_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackground"
                            android:clickable="true"
                            android:padding="@dimen/cards_padding"
                            android:text="@string/instagram"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/text_small"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/author_link2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackground"
                            android:clickable="true"
                            android:padding="@dimen/cards_padding"
                            android:text="@string/gplus"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/text_small"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

           </LinearLayout>
        </ScrollView>

</LinearLayout>